--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,13 @@
-$background-color: #151f30;
-$background-color-secondary: #141414;
+$background-color-secondary: #151f30;
+$background-color: #141414;
 $background-gradient: linear-gradient(135deg, black, #141414, #012e40);
 
 $text-color: #f4e2de;
 
-// $first-color: #d94f04;
 $first-color: #e3371e;
-// $second-color: #3d5b81;
 $second-color: #3d5b81;
 $third-color: #0593a2;
-// $fourth-color: #0593A2;
-$background-color: #151f30;
+$border-color: rgba(255, 255, 255, 0.186);
 
 $screen-size: 1000px;
 $font-size: 1.5rem;
