--- a/src/pages/components/slider/Slider.scss
+++ b/src/pages/components/slider/Slider.scss
@@ -3,6 +3,8 @@
 .slider {
 	height: 150px;
 	width: 100%;
+	// min-width: 270px;
+	// box-sizing: content-box;
 	position: relative;
 	display: flex;
 	justify-content: center;
