--- a/src/pages/components/email/Email.scss
+++ b/src/pages/components/email/Email.scss
@@ -3,7 +3,7 @@
 .email-form {
 	width: 100%;
 	padding: 15px;
-    box-sizing: border-box;
+	box-sizing: border-box;
 
 	display: flex;
 
@@ -13,6 +13,8 @@
 		width: 100%;
 		display: flex;
 		flex-direction: column;
+		overflow: hidden;
+		// padding: 5px;
 		// justify-content: center;
 		// align-items: center;
 
@@ -27,7 +29,7 @@
 			background-color: index.$background-color;
 			color: index.$text-color;
 			transition: all 1s linear;
-            border: solid 1px rgba(255, 255, 255, 0.2);
+			border: solid 1px rgba(255, 255, 255, 0.2);
 
 			&.active {
 				color: index.$text-color;
@@ -46,20 +48,23 @@
 		}
 
 		.main-box {
-            // overflow: hidden;
+			// overflow: hidden;
 			display: flex;
-            // align-content: space-between;
-            // align-content: space-around;
-            justify-content: space-between;
+			// align-content: space-between;
+			// align-content: space-around;
+			justify-content: space-between;
+
 			.box-inputs {
 				display: flex;
 				flex-direction: column;
-                flex:1;
+				flex: 1;
+
 				.inp-text {
-                    margin: 10px;
+					margin: 10px;
 					font-size: 1.2rem;
 					max-width: 320px;
-                    // width: 250px;
+					// min-width: 240px;
+					// width: 250px;
 					height: 30px;
 					padding: 5px 25px;
 					outline: none;
@@ -67,27 +72,28 @@
 					background-color: index.$background-color;
 					color: index.$text-color;
 					border-radius: 5px;
-                    
+
 					box-shadow: 0 0 0 30px index.$background-color inset;
 					-webkit-text-fill-color: index.$text-color;
-                    border: solid 1px rgba(255, 255, 255, 0.2);
+					border: solid 1px rgba(255, 255, 255, 0.2);
 				}
 			}
+
 			.email-icon {
-                color: rgba(247, 86, 86, 0.825);
-                font-size: 9rem;
-                font-weight: 100;
-                padding-right: 35px;
-                // border: solid 1px rgba(255, 255, 255, 0.345);
-                // ;
+				color: rgba(247, 86, 86, 0.825);
+				font-size: 9rem;
+				font-weight: 100;
+				padding-right: 35px;
+				// border: solid 1px rgba(255, 255, 255, 0.345);
+				// ;
 			}
 
-            @media (max-width:700px) {
-                .email-icon{
-                    display: none;
-                }
-
-            }
+			@media (max-width: 700px) {
+				display: block;
+				.email-icon {
+					display: none;
+				}
+			}
 		}
 		textarea {
 			box-sizing: border-box;
@@ -101,7 +107,7 @@
 			border: none;
 			resize: none;
 			outline: none;
-            border: solid 1px rgba(255, 255, 255, 0.2);
+			border: solid 1px rgba(255, 255, 255, 0.2);
 			// box-shadow: 0 0 3px index.$first-color;
 			// border: 1px solid index.$first-color;
 			background-color: index.$background-color;
@@ -122,7 +128,7 @@
 			background-color: index.$background-color;
 			color: index.$text-color;
 			transition: box-shadow 1s linear;
-            border: solid 1px rgba(255, 255, 255, 0.2);
+			border: solid 1px rgba(255, 255, 255, 0.2);
 			cursor: pointer;
 			&:hover {
 				// box-shadow: 0 0 15px white;
