--- a/src/pages/scss/OneProject.scss
+++ b/src/pages/scss/OneProject.scss
@@ -1,57 +1,68 @@
-@use '../../index.scss';
+@use "../../index.scss";
 
 .one-project {
-    width: 100%;
+	width: 100%;
+
+	align-self: center;
+	justify-self: center;
+
+	min-height: 100vh;
+	box-sizing: border-box;
+
+	display: flex;
+	flex-direction: column;
+
+	align-items: center;
+
+	.description {
+        box-sizing: border-box;
+		width: 100%;
+        padding: 25px;
+		text-align: justify;
+        hyphens: auto;
+
+		background-color: index.$background-color-secondary;
+		border-radius: index.$box-radius;
+		border: solid 1px index.$border-color;
 
 
-    // max-width: 1100px;
-// background-color: #141414;
-// padding: 50px;
-align-self: center;
-justify-self: center;
+		h1 {
+			font-size: 3rem;
+			@include index.coloredFont;
+		}
+	}
 
-    min-height: 100vh;
-    box-sizing: border-box;
-
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-
-.description{
-    width: 100%;
-    max-width: 1000px;
-    text-align: justify;
-    
-    h1{
-        font-size: 3rem;
-        @include index.coloredFont;
+    .project-box{
+        margin-top: 30px;
+        width: 100%;
+        background-color: index.$background-color-secondary;
+		border-radius: index.$box-radius;
+		border: solid 1px index.$border-color;
     }
-}
 
 
 
-    a {
-        background-color: index.$first-color;
-        color: index.$text-color;
-        text-decoration: none;
-        width: 120px;
-        padding: 5px 10px;
-        margin: 60px 0;
-        font-size: index.$font-size;
+	a {
+		background-color: index.$first-color;
+		color: index.$text-color;
+		text-decoration: none;
+		width: 120px;
+		padding: 5px 10px;
+		margin: 60px 0;
+		font-size: index.$font-size;
 
-        text-align: center;
-        display: flex;
-        justify-self: center;
+		text-align: center;
+		display: flex;
+		justify-self: center;
 
-        &:hover{
-            box-shadow: 0 0 15px;
-        }
+		&:hover {
+			box-shadow: 0 0 15px;
+		}
 
-        .icon {
-            align-self: center;
-            padding-right: 15px;
-            padding: 0 15px;
-        }
-    }
+		.icon {
+			align-self: center;
+			padding-right: 15px;
+			padding: 0 15px;
+		}
+	}
 }
