--- a/src/index.scss
+++ b/src/index.scss
@@ -14,43 +14,49 @@ $font-size: 1.5rem;
 $box-radius: 10px;
 
 @mixin coloredFont {
-    background: linear-gradient(to right, red, $second-color);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+	background: linear-gradient(to right, red, $second-color);
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+@mixin borderStyle {
+	background-color: $background-color-secondary;
+	border-radius: $box-radius;
+	border: solid 1px $border-color;
 }
 
 .main-body {
-    margin: 0;
-    // max-width: 100vw;
-    // width: 100vw;
-    width: 100%;
-    max-width: 100vw;
-    overflow: hidden;
-    // min-width: 320px;
+	margin: 0;
+	// max-width: 100vw;
+	// width: 100vw;
+	width: 100%;
+	max-width: 100vw;
+	overflow: hidden;
+	// min-width: 320px;
 }
 
 :root {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    height: 100vh;
-    // min-width: 320px;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	height: 100vh;
+	// min-width: 320px;
 
-    // background: linear-gradient(60deg, black, #141414, #012e40);
-    background-color: $background-color;
-    background-attachment: fixed;
-    overflow-x: hidden;
-    color: $text-color;
+	// background: linear-gradient(60deg, black, #141414, #012e40);
+	background-color: $background-color;
+	background-attachment: fixed;
+	overflow-x: hidden;
+	color: $text-color;
 
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    // font-family: cursive;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+	// font-family: cursive;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 
-    font-weight: 400;
-    font-size: 14px;
+	font-weight: 400;
+	font-size: 14px;
 
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
