--- a/src/pages/Home/About-Third-Box.scss
+++ b/src/pages/Home/About-Third-Box.scss
@@ -2,14 +2,12 @@
 
 .about {
 	.third-block {
+		@include index.borderStyle;
+
 		width: 100%;
 		margin: 15px 0 0px;
 		z-index: 2;
 		box-sizing: border-box;
-
-		background-color: index.$background-color-secondary;
-		border-radius: index.$box-radius;
-		border: solid 1px index.$border-color;
 	}
 
 	.fourth-block {
@@ -19,16 +17,14 @@
 		display: flex;
 		flex-wrap: wrap;
 		flex-direction: row;
-		// align-items: center;
-		// justify-content: center;
+
 		justify-content: space-around;
 		align-content: space-around;
 		gap: 15px;
 
 		.box-text {
-			background-color: index.$background-color-secondary;
-			border-radius: index.$box-radius;
-			border: solid 1px index.$border-color;
+			@include index.borderStyle;
+
 			flex: 1;
 			flex-grow: 1;
 
@@ -42,11 +38,13 @@
 			hyphens: auto;
 			h2 {
 				@include index.coloredFont;
+
 				font-size: 3rem;
 				margin-bottom: 5px;
 				opacity: 0;
 				transform: translateY(70px);
 				transition: all 1s ease-out;
+
 				&.active {
 					opacity: 1;
 					transform: translateY(0px);
@@ -67,11 +65,10 @@
 			}
 		}
 		.box-tech-bars {
+			@include index.borderStyle;
+
 			flex: 1;
 			flex-grow: 1.2;
-			background-color: index.$background-color-secondary;
-			border-radius: index.$box-radius;
-			border: solid 1px index.$border-color;
 		}
 	}
 
@@ -83,11 +80,10 @@
 		gap: 15px;
 
 		.box-text {
+			@include index.borderStyle;
+
 			flex: 1;
 			height: auto;
-			background-color: index.$background-color-secondary;
-			border-radius: index.$box-radius;
-			border: solid 1px index.$border-color;
 
 			display: flex;
 			justify-content: center;
@@ -109,19 +105,18 @@
 		}
 
 		.box-robot {
+			@include index.borderStyle;
 			box-sizing: border-box;
 			// width: 100%;
-			
+
 			padding: 10px;
-			background-color: index.$background-color-secondary;
-			border-radius: index.$box-radius;
-			border: solid 1px index.$border-color;
 			flex: 1;
 			flex-grow: 1.4;
 
 			display: flex;
 			align-items: center;
 			justify-content: center;
+
 			.robot-div {
 				aspect-ratio: 5/3;
 				position: relative;
@@ -129,8 +124,6 @@
 				height: 367px;
 				background-image: url(../../images/factory.jpg);
 				background-size: cover;
-				// object-position: left;
-				// box-shadow: 0 0 25px white;
 
 				.robot {
 					position: absolute;
@@ -145,21 +138,18 @@
 	}
 
 	.sixth-block {
+		@include index.borderStyle;
+
 		width: 100%;
 		margin: 15px 0 0;
 		box-sizing: border-box;
 		overflow: hidden;
-
-		background-color: index.$background-color-secondary;
-		border-radius: index.$box-radius;
-		border: solid 1px index.$border-color;
 
 		.text6 {
 			padding: 20px;
 			margin: 0;
 			text-align: justify;
 			hyphens: auto;
-			// max-width: 800px;
 
 			opacity: 0;
 			transform: translateY(70px);
@@ -171,7 +161,7 @@
 		}
 	}
 
-	.seven-block{
+	.seven-block {
 		width: 100%;
 		margin: 15px 0 0;
 		display: flex;
@@ -179,32 +169,23 @@
 		flex-wrap: wrap;
 		gap: 15px;
 
+		.box-email {
+			@include index.borderStyle;
 
-
-		
-
-		.box-email{
 			box-sizing: border-box;
 			width: 100%;
 			flex: 1;
 			flex-grow: 1.4;
-			background-color: index.$background-color-secondary;
-			border-radius: index.$box-radius;
-			border: solid 1px index.$border-color;
-			
+
 			padding: 35px 0;
-			
 		}
-		
-		.box-text{
-			flex:1;
+
+		.box-text {
+			@include index.borderStyle;
+
+			flex: 1;
 			flex-grow: 1;
-			background-color: index.$background-color-secondary;
-			border-radius: index.$box-radius;
-			border: solid 1px index.$border-color;
 			min-width: 270px;
 		}
 	}
-
-
 }
