--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-$background-color-secondary: #151f30;
+$background-color-secondary: #0c1629;
 $background-color: #141414;
 $background-gradient: linear-gradient(135deg, black, #141414, #012e40);
 
