--- a/src/pages/Projects/Cards-data/Cards.scss
+++ b/src/pages/Projects/Cards-data/Cards.scss
@@ -1,112 +1,97 @@
 @use "../../../index.scss";
 
-.cards-component {
-	@include index.borderStyle;
+.cards-box {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+	gap: 30px;
+	// border: none;
+	// margin: 20px 0;
 
-	padding: 25px;
-	overflow: hidden;
+	justify-content: center;
+	align-items: center;
 
-	input[type="text"] {
-		display: block;
-		margin: 30px 0;
-		padding: 5px 10px;
-		justify-self: center;
-		border: none;
-		outline: none;
-	}
+	.one-card {
+		// margin: 10px;
+		padding: 0px;
+		width: 260px;
+		height: 330px;
+		box-shadow: 0 0 15px index.$third-color;
+		overflow: hidden;
+		padding-bottom: 5px;
+		background: index.$background-gradient;
+		// border-radius: 15px;
 
-	.cards-box {
+		position: relative;
+
 		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		width: 100%;
-		gap: 30px;
-		margin: 20px 0;
+		flex-direction: column;
 
-		justify-content: center;
-		align-items: center;
-
-		.one-card {
-			// margin: 10px;
-			padding: 0px;
-			width: 260px;
-			height: 330px;
-			box-shadow: 0 0 15px index.$third-color;
+		&::after {
+			content: "";
+			position: absolute;
+			background-color: index.$background-color;
+			width: 130px;
+			height: 30px;
+			left: 0;
+			top: 179px;
+			border-top-right-radius: 45px;
+			border-top: 10px solid index.$background-color;
+			border-right: 10px solid index.$background-color;
+		}
+		.img-box {
+			height: 65%;
 			overflow: hidden;
-			padding-bottom: 5px;
-			background: index.$background-gradient;
-			// border-radius: 15px;
+
+			img {
+				display: block;
+				justify-self: center;
+				height: 100%;
+			}
+		}
+
+		.text-box {
+			border-top: 10px solid index.$background-color;
+			display: flex;
+			flex-direction: column;
+			// background-color: index.$third-color;
+			height: 35%;
 
 			position: relative;
 
-			display: flex;
-			flex-direction: column;
+			h3 {
+				padding: 5px 0;
+				margin: 20px 15px 5px;
+				text-align: center;
+				color: index.$first-color;
+				background-color: index.$background-color-secondary;
+				border-radius: 10px;
+				box-shadow: 0 0 15px index.$third-color;
+			}
 
-			&::after {
-				content: "";
+			p {
+				margin: 5px 15px;
+				font-size: index.$font-size;
+			}
+			a {
+				padding: 5px 10px;
+				width: 80px;
+				border-radius: 10px 20px 10px 10px;
+				cursor: pointer;
+				text-decoration: none;
+				border: none;
+				background-color: index.$third-color;
+				color: index.$text-color;
+				box-shadow: 0 0 10px index.$third-color;
+				transition: all linear 0.5s;
 				position: absolute;
-				background-color: index.$background-color;
-				width: 130px;
-				height: 30px;
-				left: 0;
-				top: 179px;
-				border-top-right-radius: 45px;
-				border-top: 10px solid index.$background-color;
-				border-right: 10px solid index.$background-color;
-			}
-			.img-box {
-				height: 65%;
-				overflow: hidden;
+				top: -20px;
+				left: 15px;
+				z-index: 10;
 
-				img {
-					display: block;
-					justify-self: center;
-					height: 100%;
-				}
-			}
-
-			.text-box {
-				border-top: 10px solid index.$background-color;
-				display: flex;
-				flex-direction: column;
-				// background-color: index.$third-color;
-				height: 35%;
-
-				position: relative;
-
-				h3 {
-					padding: 5px 0;
-					margin: 20px 15px 5px;
-					text-align: center;
-					color: index.$first-color;
-					background-color: index.$background-color-secondary;
-					border-radius: 10px;
-					box-shadow: 0 0 15px index.$third-color;
-				}
-
-				p {
-					margin: 5px 15px;
-					font-size: index.$font-size;
-				}
-				a {
-					padding: 5px 10px;
-					width: 80px;
-					border-radius: 10px 20px 10px 10px;
-					cursor: pointer;
-					text-decoration: none;
-					border: none;
-					background-color: index.$third-color;
-					color: index.$text-color;
-					box-shadow: 0 0 10px index.$third-color;
-					transition: all linear 0.5s;
-					position: absolute;
-					top: -20px;
-					left: 15px;
-					z-index: 10;
-
-					&:hover {
-						box-shadow: 0 0 20px index.$first-color;
-					}
+				&:hover {
+					box-shadow: 0 0 20px index.$first-color;
 				}
 			}
 		}
