--- a/src/pages/Home/About-First-Box.scss
+++ b/src/pages/Home/About-First-Box.scss
@@ -14,88 +14,114 @@
 		align-items: center;
 		justify-content: center;
 
-
 		h1 {
 			@include index.coloredFont;
 			font-size: 5vw;
 			margin: 0;
 		}
+		
+		@media (max-width: index.$screen-size) {
+			h1 {
+				font-size: 3rem;
+			}
+		}
 	}
-
+	
 	.first-block {
 		display: flex;
 		width: 100%;
 		box-sizing: border-box;
 		margin: 15px 0;
-
+		
 		.box {
-			
 			box-sizing: border-box;
 			display: flex;
 			flex-direction: row;
 			flex-wrap: wrap;
 			width: 100%;
-			align-items: center;
-			padding: 25px;
+			// padding: 25px;
 			gap: 15px;
 			
-			.text-box {
-				@include index.borderStyle;
+			.text-icon-box {
 				min-width: 200px;
-				// margin: 20px;
+				height: auto;
 				flex: 1;
+				flex-grow: 1.6;
 				text-align: center;
 				hyphens: auto;
+				gap: 15px;
 				
-				.t1 {
-					font-size: 2.5rem;
-					
-					opacity: 0;
-					transform: translateY(70px);
-					transition: all 1s ease-out;
-					&.active {
-						opacity: 1;
-						transform: translateY(0px);
+				display: flex;
+				flex-direction: column;
+				// align-items: center;
+				// justify-content: center;
+				@include index.borderStyle;
+				
+				.text-box {
+					// @include index.borderStyle;
+
+					overflow: hidden;
+					.t1 {
+						padding: 25px;
+						font-size: 3rem;
+						margin: 0;
+						
+						opacity: 0;
+						transform: translateY(20px);
+						transition: all 1s ease-in;
+						&.active {
+							opacity: 1;
+							transform: translateY(0px);
+						}
+						
+						span{
+							color: index.$third-color;
+							
+						}
 					}
-				}
-				
-				.t2 {
-					opacity: 0;
-					padding: 25px;
-					transform: translateY(70px);
-					transition: all 1.5s ease-out;
-					&.active {
-						opacity: 1;
-						transform: translateY(0px);
+					
+					.t2 {
+						margin: 0;
+						opacity: 0;
+						padding: 25px;
+						
+						transform: translateY(20px);
+						transition: all 1.5s ease-in;
+						&.active {
+							opacity: 1;
+							transform: translateY(0px);
+						}
 					}
 				}
 				
 				.icons-box {
+					// @include index.borderStyle;
+
+					// flex: 1;
+					// flex-grow: 1;
 					display: flex;
 					z-index: 2;
 					justify-content: space-around;
 					
-					opacity: 0;
-					transform: translateY(70px);
-					transition: all 2s ease-out;
-					
-					&.active {
-						opacity: 1;
-						transform: translateY(0px);
-					}
-					
 					.react-icon {
 						margin: 25px;
+						opacity: 0;
+						transition: all 4s ease-in;
 						
 						&.react {
 							animation: rotate 20s forwards infinite linear;
 						}
+						&.active {
+							opacity: 1;
+						}
 					}
 				}
 			}
-			
+
 			.box-myphoto {
 				@include index.borderStyle;
+
+				// height: auto;
 				border-radius: 15px;
 				overflow: hidden;
 				// box-sizing: border-box;
@@ -108,9 +134,6 @@
 					// background-color: white;
 
 					width: 400px;
-					// min-width: 300px;
-					// min-height: 300px;
-					margin-top: 15px;
 					z-index: 5;
 				}
 			}
