--- a/src/pages/Home/About-Third-Box.scss
+++ b/src/pages/Home/About-Third-Box.scss
@@ -42,8 +42,8 @@
 				font-size: 3rem;
 				margin-bottom: 5px;
 				opacity: 0;
-				transform: translateY(70px);
-				transition: all 1s ease-out;
+				transform: translateY(20px);
+				transition: all 1s ease-in;
 
 				&.active {
 					opacity: 1;
@@ -56,8 +56,8 @@
 				padding: 30px;
 
 				opacity: 0;
-				transform: translateY(70px);
-				transition: all 1.5s ease-out;
+				transform: translateY(20px);
+				transition: all 1.5s ease-in;
 				&.active {
 					opacity: 1;
 					transform: translateY(0px);
@@ -95,8 +95,8 @@
 				hyphens: auto;
 
 				opacity: 0;
-				transform: translateY(70px);
-				transition: all 2s ease-out;
+				transform: translateY(20px);
+				transition: all 2s ease-in;
 				&.active {
 					opacity: 1;
 					transform: translateY(0px);
@@ -152,8 +152,8 @@
 			hyphens: auto;
 
 			opacity: 0;
-			transform: translateY(70px);
-			transition: all 2s ease-out;
+			transform: translateY(20px);
+			transition: all 2s ease-in;
 			&.active {
 				opacity: 1;
 				transform: translateY(0px);
