--- a/src/pages/Projects/Cards-data/Cards.scss
+++ b/src/pages/Projects/Cards-data/Cards.scss
@@ -1,48 +1,39 @@
 @use "../../../index.scss";
 
 .cards-box {
+	min-width: 290px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	width: 100%;
-	gap: 30px;
-	// border: none;
-	// margin: 20px 0;
-
-	justify-content: center;
-	align-items: center;
+	gap: 15px;
+	
 
 	.one-card {
-		// margin: 10px;
-		padding: 0px;
-		width: 260px;
-		height: 330px;
-		box-shadow: 0 0 15px index.$third-color;
+		@include index.borderStyle;
+
+		max-width: 500px;
+		min-width: 220px;
+		flex: 1;
+		padding: 15px;
+		height: auto;
 		overflow: hidden;
-		padding-bottom: 5px;
-		background: index.$background-gradient;
-		// border-radius: 15px;
 
 		position: relative;
 
 		display: flex;
 		flex-direction: column;
 
-		&::after {
-			content: "";
-			position: absolute;
-			background-color: index.$background-color;
-			width: 130px;
-			height: 30px;
-			left: 0;
-			top: 179px;
-			border-top-right-radius: 45px;
-			border-top: 10px solid index.$background-color;
-			border-right: 10px solid index.$background-color;
-		}
+		// justify-content: center;
+		align-items: center;
+		
+		
 		.img-box {
-			height: 65%;
+			min-height: 235px;
+			max-height: 235px;
+			width: 250px;
 			overflow: hidden;
+			border-radius: 15px;
 
 			img {
 				display: block;
@@ -52,27 +43,36 @@
 		}
 
 		.text-box {
-			border-top: 10px solid index.$background-color;
+			margin-top: 15px;
 			display: flex;
+			flex: 1;
 			flex-direction: column;
-			// background-color: index.$third-color;
 			height: 35%;
+			gap: 15px;
 
-			position: relative;
 
 			h3 {
-				padding: 5px 0;
-				margin: 20px 15px 5px;
+				box-sizing: border-box;
+				width: 250px;
+				padding: 5px 10px;
+				margin: 0;
 				text-align: center;
-				color: index.$first-color;
-				background-color: index.$background-color-secondary;
+				// overflow: hidden;
+				background-color: index.$background-color;
+				font-size: index.$font-size;
+				border: solid 1px rgba(255, 255, 255, 0.186);
 				border-radius: 10px;
-				box-shadow: 0 0 15px index.$third-color;
 			}
 
 			p {
-				margin: 5px 15px;
+				margin: 0;
+				padding: 10px 5px;
 				font-size: index.$font-size;
+				border: 1px solid rgba(255, 255, 255, 0.186);
+				background-color: index.$background-color;
+				border-radius: 15px;
+				text-align: center;
+
 			}
 			a {
 				padding: 5px 10px;
@@ -85,10 +85,6 @@
 				color: index.$text-color;
 				box-shadow: 0 0 10px index.$third-color;
 				transition: all linear 0.5s;
-				position: absolute;
-				top: -20px;
-				left: 15px;
-				z-index: 10;
 
 				&:hover {
 					box-shadow: 0 0 20px index.$first-color;
