--- a/src/pages/components/email/Email.scss
+++ b/src/pages/components/email/Email.scss
@@ -80,12 +80,18 @@
 			}
 
 			.email-icon {
-				color: rgba(247, 86, 86, 0.825);
+				// color: rgba(247, 86, 86, 0.825);
 				font-size: 9rem;
 				font-weight: 100;
 				padding-right: 35px;
-				// border: solid 1px rgba(255, 255, 255, 0.345);
-				// ;
+				// transition: color 3s linear;
+				animation: blink 7s linear infinite;
+			}
+
+			@keyframes blink {
+				0%{color: white}
+				50%{color: index.$third-color}
+				100%{color: white}
 			}
 
 			@media (max-width: 700px) {
