--- a/src/pages/scss/OneProject.scss
+++ b/src/pages/scss/OneProject.scss
@@ -2,39 +2,96 @@
 
 .one-project {
 	width: 100%;
+	min-width: 290px;
+	min-height: 100vh;
+	box-sizing: border-box;
 
 	align-self: center;
 	justify-self: center;
 
-	min-height: 100vh;
-	box-sizing: border-box;
-
 	display: flex;
 	flex-direction: column;
-
 	align-items: center;
 
-	.description {
+	.header {
 		@include index.borderStyle;
 
-		box-sizing: border-box;
 		width: 100%;
-		padding: 25px;
-		text-align: justify;
-		hyphens: auto;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 
 		h1 {
 			@include index.coloredFont;
+			font-size: 5vw;
+			margin: 0;
+		}
 
-			font-size: 3rem;
+		@media (max-width: index.$screen-size) {
+			h1 {
+				font-size: 3rem;
+			}
+		}
+	}
+
+	.description {
+		width: 100%;
+		margin-top: 15px;
+		box-sizing: border-box;
+		gap: 15px;
+		
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		
+		.git-box {
+			@include index.borderStyle;
+			min-width: 300px;
+			min-height: 300px;
+			padding: 25px;
+			box-sizing: border-box;
+			flex: 1;
+
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			align-items: center;
+
+			.giticon{
+				// height: 50%;
+			}
+
+			h2{
+				font-size: 3rem;
+				margin: 0;
+			}
+			a{
+				background-color: transparent;
+				font-size: 2rem;
+				margin: 0
+			}
+		}
+		
+		.text-box {
+			@include index.borderStyle;
+			padding: 25px;
+			box-sizing: border-box;
+			flex: 1;
+			flex-grow: 2;
+			font-size: index.$font-size;
+
+			text-align: justify;
+			hyphens: auto;
 		}
 	}
 
 	.project-box {
 		@include index.borderStyle;
-		
-		margin-top: 30px;
+
+		margin-top: 15px;
+		padding: 25px;
 		width: 100%;
+		box-sizing: border-box;
 	}
 
 	a {
