--- a/src/pages/Projects/assets/advenced-slider/AdvencedSlider.scss
+++ b/src/pages/Projects/assets/advenced-slider/AdvencedSlider.scss
@@ -1,9 +1,9 @@
 .advenced-slider {
-    box-shadow: 0 0 20px #e50914;
+    box-shadow: 0 0 20px white;
     border-radius: 2px;
     padding: 10px;
     width: 320px;
-    height: 450px;
+    min-height: 490px;
     overflow: hidden;
     justify-self: center;
     align-self: center;
@@ -16,7 +16,7 @@
     transition: all 2s ease;
 
     &:hover {
-        box-shadow: 0 0 35px white;
+        box-shadow: 0 0 35px #e50914;
     }
 
     .card {
