big bugs repair

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,6 +42,7 @@ $font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida San
 	padding: 0;
 	margin: 0;
 	height: 100vh;
+	user-select: none;
 	// min-width: 320px;
 
 	// background: linear-gradient(60deg, black, #141414, #012e40);
