--- a/src/pages/Projects/assets/firebase/scss/Movies.scss
+++ b/src/pages/Projects/assets/firebase/scss/Movies.scss
@@ -9,10 +9,9 @@
     align-items: center;
 
     h1 {
-        display: block;
+        text-align: center;
         font-size: 2rem;
         color: index.$first-color;
-        // text-wrap: wrap;
     }
 
     .one-movie {
