--- a/src/pages/Home/About-First-Box.scss
+++ b/src/pages/Home/About-First-Box.scss
@@ -19,20 +19,20 @@
 			font-size: 5vw;
 			margin: 0;
 		}
-		
+
 		@media (max-width: index.$screen-size) {
 			h1 {
 				font-size: 3rem;
 			}
 		}
 	}
-	
+
 	.first-block {
 		display: flex;
 		width: 100%;
 		box-sizing: border-box;
 		margin: 15px 0;
-		
+
 		.box {
 			box-sizing: border-box;
 			display: flex;
@@ -41,22 +41,22 @@
 			width: 100%;
 			// padding: 25px;
 			gap: 15px;
-			
+
 			.text-icon-box {
-				min-width: 200px;
+				min-width: 280px;
 				height: auto;
 				flex: 1;
 				flex-grow: 1.6;
 				text-align: center;
 				hyphens: auto;
 				gap: 15px;
-				
+
 				display: flex;
 				flex-direction: column;
 				// align-items: center;
 				// justify-content: center;
 				@include index.borderStyle;
-				
+
 				.text-box {
 					// @include index.borderStyle;
 
@@ -65,49 +65,44 @@
 						padding: 25px;
 						font-size: 3rem;
 						margin: 0;
-						
+
 						opacity: 0;
+						transform: translateY(20px);
+						transition: all 0.5s ease-in;
+						&.active {
+							opacity: 1;
+							transform: translateY(0px);
+						}
+
+						span {
+							color: index.$third-color;
+						}
+					}
+
+					.t2 {
+						margin: 0;
+						opacity: 0;
+						padding: 25px;
+
 						transform: translateY(20px);
 						transition: all 1s ease-in;
 						&.active {
 							opacity: 1;
 							transform: translateY(0px);
 						}
-						
-						span{
-							color: index.$third-color;
-							
-						}
-					}
-					
-					.t2 {
-						margin: 0;
-						opacity: 0;
-						padding: 25px;
-						
-						transform: translateY(20px);
-						transition: all 1.5s ease-in;
-						&.active {
-							opacity: 1;
-							transform: translateY(0px);
-						}
 					}
 				}
-				
-				.icons-box {
-					// @include index.borderStyle;
 
-					// flex: 1;
-					// flex-grow: 1;
+				.icons-box {
 					display: flex;
 					z-index: 2;
 					justify-content: space-around;
-					
+
 					.react-icon {
 						margin: 25px;
 						opacity: 0;
 						transition: all 4s ease-in;
-						
+
 						&.react {
 							animation: rotate 20s forwards infinite linear;
 						}
@@ -120,19 +115,16 @@
 
 			.box-myphoto {
 				@include index.borderStyle;
+				min-width: 280px;
 
-				// height: auto;
+				flex: 1;
 				border-radius: 15px;
 				overflow: hidden;
-				// box-sizing: border-box;
-				// border: solid 1px rgba(255, 255, 255, 0.192);
 
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				.me {
-					// background-color: white;
-
 					width: 400px;
 					z-index: 5;
 				}
