--- a/src/pages/Projects/Cards-data/Cards.scss
+++ b/src/pages/Projects/Cards-data/Cards.scss
@@ -7,7 +7,6 @@
 	flex-wrap: wrap;
 	width: 100%;
 	gap: 15px;
-	
 
 	.one-card {
 		@include index.borderStyle;
@@ -26,12 +25,21 @@
 
 		// justify-content: center;
 		align-items: center;
-		
-		
+		color: index.$first-color;
+		text-decoration: none;
+
+		&:hover{
+			h3{
+				box-shadow: 0 0 10px index.$first-color;
+			}
+			
+		}
+
 		.img-box {
 			min-height: 235px;
 			max-height: 235px;
-			width: 250px;
+			min-width: 250px;
+			max-width: 290px;
 			overflow: hidden;
 			border-radius: 15px;
 
@@ -50,7 +58,6 @@
 			height: 35%;
 			gap: 15px;
 
-
 			h3 {
 				box-sizing: border-box;
 				width: 250px;
@@ -61,35 +68,37 @@
 				background-color: index.$background-color;
 				font-size: index.$font-size;
 				border: solid 1px rgba(255, 255, 255, 0.186);
-				border-radius: 10px;
+				border-radius: 5px;
 			}
 
 			p {
+				box-sizing: border-box;
 				margin: 0;
-				padding: 10px 5px;
+				padding: 5px 10px;
 				font-size: index.$font-size;
 				border: 1px solid rgba(255, 255, 255, 0.186);
 				background-color: index.$background-color;
-				border-radius: 15px;
+				border-radius: 5px;
 				text-align: center;
-
-			}
-			a {
-				padding: 5px 10px;
-				width: 80px;
-				border-radius: 10px 20px 10px 10px;
-				cursor: pointer;
-				text-decoration: none;
-				border: none;
-				background-color: index.$third-color;
 				color: index.$text-color;
-				box-shadow: 0 0 10px index.$third-color;
-				transition: all linear 0.5s;
-
-				&:hover {
-					box-shadow: 0 0 20px index.$first-color;
-				}
+				text-decoration: none;
 			}
+			// a {
+			// 	padding: 5px 10px;
+			// 	width: 80px;
+			// 	border-radius: 10px 20px 10px 10px;
+			// 	cursor: pointer;
+			// 	text-decoration: none;
+			// 	border: none;
+			// 	background-color: index.$third-color;
+			// 	color: index.$text-color;
+			// 	box-shadow: 0 0 10px index.$third-color;
+			// 	transition: all linear 0.5s;
+
+			// 	&:hover {
+			// 		box-shadow: 0 0 20px index.$first-color;
+			// 	}
+			// }
 		}
 	}
 }
