--- a/src/pages/Projects/assets/faq/Faq.scss
+++ b/src/pages/Projects/assets/faq/Faq.scss
@@ -1,58 +1,61 @@
 @use "../../../../index.scss";
 
-
-
 .appContainer {
-    margin-top: 80px;
 
+	.cardContainer {
+		// width: 60%;
+		max-width: 600px;
+		margin: 30px auto;
+		padding: 5px 10px;
+		border-radius: 5px;
+		box-shadow: 0 0 15px rgba(255, 0, 0, 0.667);
 
+		h2 {
+			font-weight: 400;
+			padding-right: 10px;
+		}
 
-    .cardContainer {
-        // width: 60%;
-        max-width: 600px;
-        margin: 30px auto;
-        padding: 5px 10px;
-        border-radius: 5px;
-        box-shadow: 0 0 15px rgba(255, 0, 0, 0.667);
-
-        h2 {
-            font-weight: 400;
-            padding-right: 10px;
-        }
-
-        .firstBox {
-            padding: 5px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .close {
-            /* padding: 5px; */
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 3s ease;
-        }
-
-        .open {
-            max-height: fit-content;
-        }
-        
-        button {
+		.firstBox {
+			padding: 5px;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
             text-align: center;
-            height: 30px;
-            min-width: 100px;
-            background-color: rgb(130, 9, 9);
-            color: aliceblue;
-            border-radius: 5px;
-            cursor: pointer;
-            border: none;
+            h2{
+                hyphens: auto;
 
-            &:hover{box-shadow: 0 0 15px white;}
-        }
-    }
+            }
+
+			@media (max-width: 630px) {
+				flex-direction: column;
+			}
+		}
+
+		.close {
+			/* padding: 5px; */
+			max-height: 0;
+			overflow: hidden;
+			transition: max-height 3s ease;
+		}
+
+		.open {
+			max-height: fit-content;
+		}
+
+		button {
+			text-align: center;
+			height: 30px;
+			min-width: 100px;
+			background-color: rgb(130, 9, 9);
+			color: aliceblue;
+			border-radius: 5px;
+			cursor: pointer;
+			border: none;
+
+			&:hover {
+				box-shadow: 0 0 15px white;
+			}
+		}
+	}
 }
-
-
-
