--- a/src/pages/Projects/assets/sudoku-solver/SudokuSolver.scss
+++ b/src/pages/Projects/assets/sudoku-solver/SudokuSolver.scss
@@ -11,17 +11,18 @@ $border-color: #0d4861;
 	align-items: center;
 	text-align: center;
 
-	h1{
+	h1 {
 		font-size: 3rem;
 	}
-	
+
 	.buttons {
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: center;
 		button {
-			min-width: 85px;
+			box-sizing: border-box;
+			min-width: 110px;
 			background-color: index.$first-color;
 			color: index.$text-color;
 			font-size: index.$font-size;
@@ -29,22 +30,33 @@ $border-color: #0d4861;
 			border: none;
 			padding: 5px 10px;
 			margin: 15px;
-			
+
 			&:active {
 				background-color: black;
 			}
 		}
+
+		@media (max-width: 400px) {
+			button {
+				min-width: 88px;
+				font-size: 1rem;
+			}
+		}
 	}
-	
+
 	.sudoku {
+		margin-top: 10px;
+		box-sizing: border-box;
 		display: grid;
 		grid-template-columns: repeat(9, 1fr);
 		grid-template-rows: repeat(9, 1fr);
-		width: 90vmin;
-		height: 90vmin;
+		max-width: 700px;
+		max-height: 700px;
+		aspect-ratio: 1/1;
+		// height: 80vmin;
 		border: solid 6px $border-color;
 		position: relative;
-		
+
 		.info-message {
 			padding: 5px 10px;
 			position: absolute;
@@ -57,65 +69,66 @@ $border-color: #0d4861;
 			border-radius: 5px;
 			background: linear-gradient(45deg, #141414, rgb(54, 3, 3));
 		}
-		
+
 		.pole {
+			box-sizing: border-box;
 			border: solid 1px rgba(0, 0, 0, 0.345);
 			display: flex;
 			position: relative;
 			z-index: 5;
 			flex: 1;
-			
+
 			&.active {
 				background-color: rgba(241, 16, 20, 0.107);
 			}
-			
+
 			&:nth-child(n + 19):nth-child(-n + 27) {
 				border-bottom: solid $border-color 3px;
 			}
-			
+
 			&:nth-child(n + 46):nth-child(-n + 54) {
 				border-bottom: solid $border-color 3px;
 			}
-			
+
 			&:nth-child(9n + 3) {
 				border-right: solid $border-color 3px;
 			}
-			
+
 			&:nth-child(9n + 6) {
 				border-right: solid $border-color 3px;
 			}
-			
+
 			input[type="number"] {
 				box-sizing: border-box;
-				font-size: 7vmin;
+				font-size: 5vmin;
 				color: index.$text-color;
-				
+
 				// font-size: 3rem;
 				width: 100%;
 				height: 100%;
-				
+
 				background-color: transparent;
 				border: none;
 				outline: none;
 				text-align: center;
 				// margin: 0;
+
+				&.input-number {
+					color: index.$first-color;
+				}
 			}
-			
+
 			input[type="number"]::-webkit-inner-spin-button,
 			input[type="number"]::-webkit-outer-spin-button {
 				-webkit-appearance: none;
 				margin: 0;
 			}
-			
-			.input-number {
-				color: index.$first-color;
-			}
-			
+
 			.small-numbers {
 				position: absolute;
 
-				width: 95%;
-				height: 95%;
+				width: 100%;
+				height: 100%;
 
 				display: grid;
 				grid-template-columns: 1fr 1fr 1fr;
@@ -127,13 +140,15 @@ $border-color: #0d4861;
 				background-color: transparent;
 
 				// font-size: 0.8rem;
-				font-size: 1.9vmin;
-
-				// .active {
-				// 	color: red;
-				// }
+				font-size: 1.3vmin;
+				span {
+					&.input-number {
+						color: index.$first-color;
+					}
+				}
 			}
 		}
+
 		@media (max-width: 500px) {
 			.pole {
 				border: solid 1px rgba(0, 0, 0, 0.093);
