--- a/src/pages/components/loading/Loading.scss
+++ b/src/pages/components/loading/Loading.scss
@@ -15,8 +15,10 @@
 	}
 
 	.load-box {
-		width: 60px;
-		height: 60px;
+		min-width: 80px;
+		max-width: 80px;
+		min-height: 80px;
+		max-height: 80px;
 		border: 10px solid;
 		border-radius: 50%;
 		border-top-color: transparent;
@@ -29,8 +31,8 @@
 		position: absolute;
 		font-weight: 500;
 		font-size: 16px;
-		top: 13px;
-		left: 13px;
+		top: 22px;
+		left: 18px;
 		text-shadow: 0 0 2px index.$second-color;
 	}
 	@keyframes rotation {
