--- a/src/pages/components/tech_bars/TechBars.scss
+++ b/src/pages/components/tech_bars/TechBars.scss
@@ -4,12 +4,12 @@
   
     min-width: 280px;
     height: fit-content;
-    // border: solid black 5px;
-    // background-color: #242424;
     background-color: transparent;
     overflow: hidden;
-    // margin: 0 15vw;
     z-index: 2;
+    flex: 1;
+
+   
     .box {
         border-radius: 15px;
         margin: 40px;
@@ -47,7 +47,7 @@
             border-radius: 0 15px 15px 0;
             background: linear-gradient(360deg, #1f9deb, #025c90);
             width: 0;
-            transition: all 7s ease-in-out;
+            transition: all 4s ease-in-out;
 
             &.active {
                 width: 80%;
@@ -59,7 +59,7 @@
             border-radius: 0 15px 15px 0;
 
             width: 0;
-            transition: all 3s ease-in-out;
+            transition: all 1s ease-in-out;
 
             &.active {
                 width: 75%;
@@ -71,7 +71,7 @@
             border-radius: 0 15px 15px 0;
 
             width: 0;
-            transition: all 5s ease-in-out;
+            transition: all 3s ease-in-out;
 
             &.active {
                 width: 50%;
@@ -83,7 +83,7 @@
             border-radius: 0 15px 15px 0;
 
             width: 0;
-            transition: all 4s ease-in-out;
+            transition: all 2s ease-in-out;
 
             &.active {
                 width: 90%;
