image folders change

--- a/src/pages/Projects/assets/email-form/EmailProject.scss
+++ b/src/pages/Projects/assets/email-form/EmailProject.scss
@@ -6,7 +6,7 @@
 	// height: 80vh;
 	padding: 15px;
 
-	background-image: url("./img.jpg");
+	background-image: url("../../../../images/email-background.jpg");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
