--- a/src/pages/Projects/assets/snake/Snake.scss
+++ b/src/pages/Projects/assets/snake/Snake.scss
@@ -6,23 +6,22 @@
 	flex-direction: column;
 	align-items: center;
 	justify-self: center;
-	background: linear-gradient(45deg, white, black);
 
 	h1 {
+		text-align: center;
 		font-size: 60px;
-        margin: 0;
+		margin: 0;
 	}
 
-	h2{
+	h2 {
 		padding: 10px;
 		text-align: center;
 		color: index.$first-color;
-		background-color: rgba($color: index.$background-color, $alpha: 1.0);
+		background-color: rgba($color: index.$background-color, $alpha: 1);
 	}
-	
 
 	.border {
-        margin: 50px;
+		margin: 50px;
 		box-sizing: content-box;
 		background-color: black;
 		padding: 3px;
