--- a/src/pages/Projects/assets/email-form/EmailProject.scss
+++ b/src/pages/Projects/assets/email-form/EmailProject.scss
@@ -80,11 +80,11 @@
 			box-sizing: border-box;
 			border-radius: 25px;
 			width: 90%;
-			padding: 10px;
+			padding: 20px;
 			height: 150px;
 			display: block;
 			margin: 10px;
-			font-size: 1.2rem;
+			font-size: index.$font-size;
 			border: none;
 			resize: none;
 			outline: none;
