--- a/src/pages/Home/About-Second-Box.scss
+++ b/src/pages/Home/About-Second-Box.scss
@@ -64,6 +64,7 @@
 				.working {
 					aspect-ratio: 1/1;
 					width: 90%;
+					filter: drop-shadow(0 4px 30px rgba(1, 138, 250, 0.5));
 
 					opacity: 0;
 
