--- a/src/pages/Home/About-First-Box.scss
+++ b/src/pages/Home/About-First-Box.scss
@@ -125,7 +125,7 @@
 				justify-content: center;
 				align-items: center;
 				.me {
-					filter: drop-shadow(0 4px 30px rgba(1, 138, 250, 0.5));
+					// filter: drop-shadow(0 4px 30px rgba(1, 138, 250, 0.5));
 					width: 400px;
 					z-index: 5;
 				}
