--- a/src/pages/Projects/assets/email-form/EmailProject.scss
+++ b/src/pages/Projects/assets/email-form/EmailProject.scss
@@ -20,7 +20,7 @@
 		width: 500px;
 		height: auto;
 		box-sizing: border-box;
-		padding: 30px;
+		padding: 30px 0;
 		border: solid 1px rgba(255, 255, 255, 0.534);
 		border-radius: 10px;
 		display: flex;
@@ -28,6 +28,7 @@
 		justify-items: center;
 		align-items: center;
 		gap: 10px;
+		
 
 		box-shadow: 0 0 5px rgba(255, 255, 255, 0.405);
 		backdrop-filter: blur(7px);
